Add header and short description

--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
+<!DOCTYPE html>
 <html>
+
 <title>David Arthur Burns</title>
+
+<head>
+<style>
+.header {
+	font-variant: small-caps;
+	text-align: center;
+}
+p {
+	margin-right: 150px;
+	margin-left: 80px;
+	font-family: sans-serif;
+}
+</style>
+</head>
+
 <body>
-<p><a href="https://www.linkedin.com/in/davidarthurburns/">LinkedIn</a></p>
+	<h1 class="header">David Arthur Burns</h1>
+	<p>Chicago-area mechanical engineer specializing in technology development led by data analysis techniques.</p>
+	<p><a href="https://www.linkedin.com/in/davidarthurburns/">LinkedIn</a></p>
 </body>
+
 </html>
