Added patents and publications

--- a/index.html
+++ b/index.html
@@ -14,13 +14,32 @@ p {
 	margin-left: 80px;
 	font-family: sans-serif;
 }
+li {
+	font-family: sans-serif;
+}
 </style>
 </head>
 
-<body>
+<body> 
 	<h1 class="header">David Arthur Burns</h1>
-	<p>Chicago-area mechanical engineer specializing in technology development led by data analysis techniques.</p>
+	<p>Chicago-area mechanical engineer specializing in technology development led by statistical data analysis techniques.</p>
 	<p><a href="https://www.linkedin.com/in/davidarthurburns/">LinkedIn</a></p>
+	
+	<h2 class="header">Patents</h2>
+	<ul>
+	<li><b>Active/passive fuse module.</b> <i>(Pending)</i> US 2024/0021394 A1, application published January 18, 2024. </li>
+	<li><b>Two-piece fuse endbell with pre-cast/pre-molded alignment slots and optional interface crush ribs.</b> U.S. Patent 11,289,297 B1, issued March 29, 2022.</li>
+	</ul>
+	
+	<h2 class="header">Publications</h2>
+	<ul>
+	<li>David Arthur Burns, Roberta L. Klatzky, Michael A. Peshkin, and J. Edward Colgate. 2024. <b>The Single-Pitch Texel: A flexible and practical texture-rendering algorithm.</b> PNAS Nexus, 3(1):pgad452.</li>
+	<li>David Arthur Burns, 2023. <b>A Multi-Scale, Low-Parameter Rendering Algorithm for Virtual Textures.</b> PhD Dissertation, Northwestern University.</li>
+	<li>David Arthur Burns, Roberta L. Klatzky, Michael A. Peshkin, and J. Edward Colgate. 2022. <b>A Low-Parameter Rendering Algorithm for Fine Textures.</b> IEEE Trans. on Haptics, 15(1):57-61.</li>
+	<li>David Arthur Burns, Roberta L. Klatzky, Michael A. Peshkin, and J. Edward Colgate. 2021. <b>Spatial perception of textures depends on length-scale.</b> In 2021 IEEE World Haptics Concerence (WHC), 415-420.</li>
+	<li>David Arthur Burns, 2014. <b>Synchronous Multi-Directional Motion Encoding in Magnetic Resonance Elastography.</b> MS Thesis, University of Illinois at Chicago.</li>
+	<li>V. Surla, P. Raman, D. Burns, M. J. Neumann, and D.N. Ruzic. 2011. <b>Physical and chemical erosion studies of lithiated ATJ graphite.</b> Journal of Nuclear Materials, 415(1):S174-S178. </li>
+	</ul>
 </body>
 
 </html>
