--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ li {
 	
 	<h2 class="header">Patents</h2>
 	<ul>
-	<li><b>Active/passive fuse module.</b> <i>(Pending)</i> US 2024/0021394 A1, application published January 18, 2024. </li>
+	<li><b>Active/passive fuse module.</b> U.S. Patent 12,308,194 В2, issued May 20, 2025. </li>
 	<li><b>Two-piece fuse endbell with pre-cast/pre-molded alignment slots and optional interface crush ribs.</b> U.S. Patent 11,289,297 B1, issued March 29, 2022.</li>
 	</ul>
 	
